# TrackVision

./: .gitignore  README.md  main.py
APIservice/: main.py  pyproject.toml
APIservice/src/api/: api_auth_router.py  api_chat_message.py  api_profile_user.py  ui_router.py
APIservice/src/api/models/: message.py  user.py
APIservice/src/app/: app.py  lifespan.py
APIservice/src/core/: aceess_token.py  security.py
APIservice/src/dependencies/: auth_deps.py
APIservice/src/dependencies/models/: token.py
APIservice/src/domain/interfaces/: user_repository.py
APIservice/src/ioc/: providers.py
APIservice/src/utils/: crypto_context.py  get_env.py  hashing.py
APIservice/ui/css/: base.css  registration.css
APIservice/ui/html/: base.html  enter.html  registration.html
APIservice/ui/js/: base.js  enter.js  registration.js
BusinessBotService/: .env  (+4 more)
ModelServiceAI/: main.py  pyproject.toml
ModelServiceAI/CarSegmentation/: main.py
ModelServiceAI/CarSegmentation/research/: YoLo.ipynb
ModelServiceAI/CarSegmentation/tests/: socket_test.py
ModelServiceAI/PeopleFlow/: Dockerfile  README.md
ModelServiceAI/PeopleFlow/research/: YoLoModel.ipynb
ModelServiceAI/PeopleFlow/tests/: README.md  socket_test.py
ModelServiceAI/research/: YoLoModel.ipynb
ModelServiceAI/src/Infrastructure/: YoLoImpl.py
ModelServiceAI/src/api/: socker_router.py
ModelServiceAI/src/app/: app.py  lifespan.py
ModelServiceAI/src/infrastructure/: YoLoImpl.py
ModelServiceAI/src/ioc/: YoLo_provider.py
ModelServiceAI/src/utils/: json_out.py
ModelServiceAI/tests/: socket_test.py
(+19 files in other folders)
