[project]
name = "apiservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "dishka>=1.8.0",
    "dotenv>=0.9.9",
    "fastapi[all]>=0.129.0",
    "passlib[argon2]>=1.7.4",
    "pyjwt>=2.11.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
]
